<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_in_document"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <!-- Hidden until pdf.html says how many pages there are, the way the search item
         waits for something searchable. It is also the route a screen reader takes to
         this, since the pill it sits beside can be faded out. -->
    <item
        android:id="@+id/action_go_to_page"
        android:title="@string/go_to_page"
        android:visible="false"
        app:showAsAction="never" />
    <!-- Turns the contents of a PDF over for reading in the dark, issue #19. The one
         checkable item in here, and hidden for every format but PDF: it is the only one
         drawn as a picture rather than laid out as a document. -->
    <item
        android:id="@+id/action_night_mode"
        android:checkable="true"
        android:title="@string/night_mode"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_file"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_copy"
        android:title="@string/save_copy"
        app:showAsAction="never" />
    <!-- Only for a file Gander can rename, which is one the picker handed it or that another
         app handed it along with write access: see Rename.kt. -->
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:visible="false"
        app:showAsAction="never" />
    <!-- A zip's list only, and only where some of its names had no code page of their own and
         one had to be guessed: everywhere else choosing one would change nothing. -->
    <item
        android:id="@+id/action_name_encoding"
        android:title="@string/name_encoding"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_folder"
        android:title="@string/show_in_file_manager"
        android:visible="false"
        app:showAsAction="never" />
</menu>
